Final update for task #122.